@@ -7,7 +7,7 @@
     <parent>
         <groupId>uk.gov.justice.framework.libraries</groupId>
         <artifactId>framework-libraries</artifactId>
-        <version>7.2.3-SNAPSHOT</version>
+        <version>8.0.0-SNAPSHOT</version>
     </parent>
 
     <groupId>uk.gov.justice.services</groupId>
@@ -30,6 +30,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>2.22.2</version>
                         <executions>
                             <execution>
                                 <goals>
@@ -38,10 +39,14 @@
                                 </goals>
                                 <configuration>
                                     <classesDirectory>target/classes/</classesDirectory>
-                                    <testClassesDirectory>target/test-classes/</testClassesDirectory>
+                                    <testClassesDirectory>target/test-classes/
+                                    </testClassesDirectory>
                                     <includes>
                                         <include>**/*</include>
                                     </includes>
+                                    <argLine>
+                                        --illegal-access=permit
+                                    </argLine>
                                 </configuration>
                             </execution>
                         </executions>
@@ -53,7 +58,8 @@
                             <classesDirectory>target/test-classes/</classesDirectory>
                             <testClassesDirectory>target/classes/</testClassesDirectory>
                             <additionalClasspathElements>
-                                <additionalClasspathElement>target/classes/</additionalClasspathElement>
+                                <additionalClasspathElement>target/classes/
+                                </additionalClasspathElement>
                             </additionalClasspathElements>
                         </configuration>
                     </plugin>
@@ -70,8 +76,11 @@
                                 </goals>
                                 <configuration>
                                     <projectName>${project.artifactId}</projectName>
-                                    <outputDirectory>${project.build.directory}/site/cucumber-reports</outputDirectory>
-                                    <cucumberOutput>${project.build.directory}/cucumber.json</cucumberOutput>
+                                    <outputDirectory>
+                                        ${project.build.directory}/site/cucumber-reports
+                                    </outputDirectory>
+                                    <cucumberOutput>${project.build.directory}/cucumber.json
+                                    </cucumberOutput>
                                     <skippedFails>true</skippedFails>
                                     <buildNumber>${maven.build.timestamp}</buildNumber>
                                 </configuration>
